# giraycoskun.dev

./: .gitignore  404.html  CNAME  README.md  blog.html  contact.html  index.html  mkdocs.yml  project.html  pyproject.toml  requirements.txt  resume.html  sitemap.xml
.github/workflows/: gh-pages.yml
awesome-bookmarks/: index.html
awesome-bookmarks/python/: index.html
blog/: index.html
blog-posts/: post_1.html
blog/tags/: index.html
developers-notebook/: index.html
developers-notebook/Answer Set Programming/: index.html
developers-notebook/Starting-Python-Project/: index.html
developers-notebook/answer-set-programming/: index.html
developers-notebook/async-python/: index.html
developers-notebook/dependency-management-python/: index.html
developers-notebook/host-your-projects/: index.html
developers-notebook/java-in-macos/: index.html
developers-notebook/modern-cpp-development/: index.html
developers-notebook/my-bookmarks/: index.html
developers-notebook/my-python-bookmarks/: index.html
developers-notebook/my-python-development-environment/: index.html
developers-notebook/python-project/: index.html
developers-notebook/self-hosted/: index.html
developers-notebook/starting-python-project/: index.html
docs/: index.md
docs/awesome-bookmarks/: index.md  python.md
docs/blog/: .authors.yml  index.md
docs/developers-notebook/: Answer Set Programming.md  Starting-Python-Project.md  async-python.md  dependency-management-python.md  host-your-projects.md  index.md  java-in-macos.md  modern-cpp-development.md  my-bookmarks.md  my-python-bookmarks.md  my-python-development-environment.md  python-project.md  self-hosted.md  starting-python-project.md  useful-commands.md  uv.md
docs/home/: cv.md  education.md  experience.md  index.md  projects.md  publications.md  skills.md
docs/projects/: index.md
home/: index.html
home/cv/: index.html
home/education/: index.html
home/experience/: index.html
home/projects/: index.html
home/publications/: index.html
home/skills/: index.html
overrides/: home.html
overrides/partials/: footer.html
projects/: index.html
search/: search_index.json
(+14 files in other folders)
