[tool.poetry]
name = "giraycoskun-dev"
version = "0.1.0"
description = "Website: giraycoskun.dev"
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "giraycoskun"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
pymdown-extensions = "^9.5"
mkdocs-material-extensions = "^1.0.3"
mkdocs-macros-plugin = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
