[tool.poetry]
name = "giraycoskun-dev"
version = "0.1.0"
description = "Website: giraycoskun.dev"
authors = ["giraycoskun <giraycoskun.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.giraycoskun.dev/"
repository = "https://github.com/giraycoskun/giraycoskun.dev"
documentation = "https://www.giraycoskun.dev/"
keywords = ["python", "mkdocs", "website"]
packages = []

[tool.poetry.dependencies]
python = "3.12.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"
pymdown-extensions = "^10.4"
mkdocs-material-extensions = "^1.0.3"
mkdocs-macros-plugin = "^1.0.5"

[tool.poe.tasks]
serve = "mkdocs serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
